# cellular-automata-2d

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
