[package]
name = "cellular-automata-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = ["render", "bevy_winit", "wayland"]

[dependencies.bevy_life]
version = "0.4.0"
default-features = false
features = ["2D"]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"
